--- a/style.css
+++ b/style.css
@@ -38,8 +38,7 @@ ellipse {
     background-color: black;
     color: yellow;
 }
-
-#time{
+#time {
     margin: auto;
     display: block;
     text-align: center;
@@ -47,4 +46,103 @@ ellipse {
     font-family: sans-serif;
     font-weight: bold;
 
+}
+
+
+
+
+.cups{
+    margin: auto;
+    width: 310px;
+}
+
+
+.cup{
+     width: 100px;
+     position: relative;
+}
+
+.row2{
+    margin-top: -10rem;
+    margin-left: 50px;
+
+}
+
+.row3{
+    margin-top: -10rem;
+    margin-left: 100px;
+}
+
+.cup4{
+    top: 5rem;
+}
+
+.cup5{
+    top: 5rem;
+}
+
+.cup6{
+    top: 10rem;
+}
+
+.ball{
+    width: 50px;
+    height: 50px;
+    position: relative;
+}
+
+
+.shooter{
+    position: relative;
+    top: 200px;
+    left: 125px;
+    width: 300px;
+    margin: auto;
+}
+
+.shootX {
+    animation: shootX 1s infinite linear;
+}
+
+
+@keyframes shootX {
+    0%{left: 0px}
+    25%{left: 125px}
+    50%{left:0px}
+    75%{left: -125px}
+    100%{left:0px}
+}
+
+
+.shootY {
+    animation: shootY 1s infinite linear;
+}
+
+@keyframes shootY {
+    0%{top:0px}
+    50%{top: 175px}
+    100% {top: 0px}
+}
+    
+.fadeAway{
+    animation: 
+    fadeAway 1s;
+    opacity: 0
+}
+
+@keyframes fadeAway  {
+    0%{opacity: 1}
+    100%{opacity: 0}
+}
+
+.Shoot {
+    animation: Shoot 1s;
+    animation-timing-function: ease;
+}
+
+@keyframes Shoot {
+
+
+    0%{top: var(--top)}
+    100%{top: var(--top325)}
 }
